[gd_scene load_steps=7 format=3 uid="uid://dqj2ytukxfyc0"]

[ext_resource type="Theme" uid="uid://bn7q4ap7m5gdu" path="res://assets/themes/dcl_theme.tres" id="1_sa8fa"]
[ext_resource type="Script" uid="uid://dge4etmtlo1k5" path="res://src/ui/components/calendar_button/calendar_button.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://cmfalhha5iitd" path="res://assets/ui/calendar.svg" id="2_qn3h6"]
[ext_resource type="FontFile" uid="uid://di6yadh02vrla" path="res://assets/themes/fonts/inter/Inter-Regular.ttf" id="2_tgdi4"]

[sub_resource type="LabelSettings" id="LabelSettings_lutqg"]
font = ExtResource("2_tgdi4")
font_size = 22
font_color = Color(0.9254902, 0.92156863, 0.92941177, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ut1fy"]
font = ExtResource("2_tgdi4")
font_size = 22
font_color = Color(0.9098039, 0.7254902, 1, 1)

[node name="CalendarButton" type="HBoxContainer"]
offset_right = 64.0
offset_bottom = 64.0
theme_override_constants/separation = 12
script = ExtResource("1_script")

[node name="HBoxContainer_Text" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 50.0
theme_override_constants/separation = 8

[node name="Label_Day" type="Label" parent="HBoxContainer_Text"]
unique_name_in_owner = true
layout_mode = 2
text = "Mon, Jan 19."
label_settings = SubResource("LabelSettings_lutqg")

[node name="Label_Time" type="Label" parent="HBoxContainer_Text"]
unique_name_in_owner = true
layout_mode = 2
text = "04:10pm to 06:10pm (UTC-3)"
label_settings = SubResource("LabelSettings_ut1fy")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme = ExtResource("1_sa8fa")
theme_type_variation = &"EngagementButton"
theme_override_constants/icon_max_width = 35
icon = ExtResource("2_qn3h6")
icon_alignment = 1
expand_icon = true
